# Q1_26_Accel_ShadowBook

./: .gitignore  Anchor.toml  CONTRIBUTING.md  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: implementation-spec.md
programs/anchor_rock_paper_scissor/: Cargo.toml
programs/anchor_rock_paper_scissor/src/: lib.rs
programs/shadow-book/: Cargo.toml
programs/shadow-book/src/: constants.rs  errors.rs  helpers.rs  lib.rs
programs/shadow-book/src/instructions/: cancel_order.rs  cancel_order_per.rs  claim_expired.rs  collect_fees.rs  create_order.rs  delegate_market.rs  deposit.rs  initialize_market.rs  match_orders.rs  mod.rs  settle.rs  submit_order_size.rs  withdraw.rs
programs/shadow-book/src/state/: market.rs  match_result.rs  mod.rs  order.rs
scripts/: magicblock_quickstart.ts  setup-devnet.sh
sdk/src/: client.ts  crank.ts  index.ts  per-client.ts  types.ts
tests/: shadow-book.ts
tests/e2e/: epoch-lifecycle.test.ts
tests/market/: deposit.test.ts  initialize-market.test.ts  withdraw.test.ts
tests/orders/: cancel-order.test.ts  claim-expired.test.ts  create-order.test.ts
tests/per/: cancel-order-per.test.ts  delegate-market.test.ts  match-orders.test.ts  submit-order-size.test.ts
tests/settlement/: collect-fees.test.ts  settle.test.ts
tests/setup/: test-context.ts
