[package]
name = "shadow-book"
version = "0.1.0"
description = "Privacy-preserving dark pool DEX on Solana using MagicBlock PER"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_book"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
ephemeral-rollups-sdk = "0.8.8"
bytemuck = { version = "1.14", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
